--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
+# Node.js
 node_modules/
+
+# Environment files
+.env
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# IDE-specific files (VS Code)
+.vscode/
+
+# Build output
+/dist
+/build
